--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -81,16 +81,16 @@
 		 
 						<div class="gallery">
 							<article class="from-left">
-								<a href=".../.../fulls/01.png" class="image fit"><img src=".../.../thumbs/01.png" title="Gostosos" alt="" /></a>
+								<a href=".../img/amor.jpg" class="image fit"><img src=".../img/amor.jpg" title="Gostosos" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href=".../.../fulls/02.jpg" class="image fit"><img src=".../.../thumbs/02.jpg" title="Dia legal" alt="" /></a>
+								<a href=".../img/cineminha.jpg" class="image fit"><img src=".../img/cineminha.jpg" title="Dia legal" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href=".../.../fulls/03.jpg" class="image fit"><img src=".../.../thumbs/03.jpg" title="Happy family" alt="" /></a>
+								<a href=".../img/hf.jpg" class="image fit"><img src="..../img/hf.jpg" title="Happy family" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href=".../.../fulls/04.png" class="image fit"><img src=".../.../thumbs/04.png" title="Maluquice" alt="" /></a>
+								<a href=".../img/propriedade.png" class="image fit"><img src=".../img/propriedade.png" title="Maluquice" alt="" /></a>
 							</article>
 						
 						</div>
